# src/routes.ts
@@ -1,6 +1,7 @@
 import { Router } from 'express';
 import swaggerUi from 'swagger-ui-express';
 import apiSpec from './swagger.json';
+import bodyParser from 'body-parser'
 
 import * as GameController from './controllers/game';
 import * as MoveController from './controllers/move';
@@ -10,14 +11,17 @@ const swaggerUiOptions = {
 };
 
 const router = Router();
+// const jsonParser = bodyParser.json();
+// const urlEncodedParser = bodyParser.urlencoded({ extended: true });
 
 // Game routes
 router.post('/api/game', GameController.create);
-router.get('/api/game', GameController.getState);
+//router.post('/api/game', urlEncodedParser, GameController.create);
+//router.get('/api/game', urlEncodedParser, GameController.getState);
 
 // Move routes
-router.post('/api/move', MoveController.move);
-router.get('/api/move', MoveController.getMoves);
+// router.post('/api/move', urlEncodedParser, MoveController.move);
+// router.get('/api/move', urlEncodedParser, MoveController.getMoves);
 
 router.use('/api-docs', swaggerUi.serve);
 router.get('/api-docs', swaggerUi.setup(apiSpec, swaggerUiOptions));
